# openme

./: .gitignore  LICENSE  Package.swift  README.md  add_cert.sh  deploy.env-sample  deploy_daemon.sh  setup_ca.sh
.github/: copilot-instructions.md
.github/workflows/: android.yml  apple-apps.yml  apple-openmekit.yml  cli.yml  dev-android.yml  dev-apple-apps.yml  dev-apple-openmekit.yml  dev-cli.yml  dev-docs.yml  dev-openmelib.yml  dev-windows.yml  docs-on-release.yml  docs.yml  openmelib.yml  release-android-app.yml  release-app-android.yml  release-app-macos.yml  release-app-windows.yml  release-cli.yml  release-lib-c.yml  release-lib-csharp.yml  release-lib-kotlin.yml  release-lib-swift.yml  release-macos.yml  release-windows-app.yml  windows.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
android/openmekit/: Module.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/scripts/: .env.example  release-android.sh
apple/OpenMeKit/: Package.swift  README.md
apple/openme-ios/: README.md
apple/openme-macos/: README.md
apple/openme-widget/: KnockWidget.swift  openme-widget.entitlements  openme_widgetBundle.swift
apple/openme.xcworkspace/: contents.xcworkspacedata
apple/scripts/: .env.example  release-macos.sh
c/openmelib/: CMakeLists.txt  CMakeLists_idf.txt  Doxyfile  README.md  idf_component.yml  library.properties
c/openmelib/examples/arduino/openme_knock/: openme_knock.ino
c/openmelib/examples/desktop/: CMakeLists.txt  knock_example.c
c/openmelib/examples/esp32_idf/: CMakeLists.txt
c/openmelib/examples/esp32_idf/main/: CMakeLists.txt  main.c
c/openmelib/include/: openmelib.h
c/openmelib/src/: openme_sha256.c  openme_sha256.h  openmelib.c  openmelib.h
cli/: Makefile  README.md  go.mod  go.sum
cli/packaging/: openme.1
cli/scripts/: deploy-test.sh  remote-server.sh
daemon/: config.py  config.yaml  defaults.py  openme.py  openmed.py  requirements.txt  tests.py  validators.py
docs/: .quartoignore  _quarto.yml  _variables.yml  custom.scss  download.qmd  index.qmd  privacy-policy.qmd
docs/android-sdk/: index.qmd
docs/api/: index.qmd
docs/clients/: android.qmd  cli.qmd  index.qmd  ios.qmd  macos.qmd  watchos.qmd  windows.qmd
docs/configuration/: client.qmd  firewall.qmd  index.qmd  server.qmd
docs/developer/: android.qmd  c-library.qmd  csharp-openmekit.qmd  go-api.qmd  index.qmd  swift-openmekit.qmd
docs/download/: _core.qmd  android.qmd  download.css  download.js  index.qmd  ios.qmd  linux.qmd  macos.qmd  windows.qmd
docs/faq/: index.qmd  vs-fwknop.qmd  vs-tailscale.qmd  vs-vpn.qmd  vs-wireguard.qmd
docs/getting-started/: _install-binary.qmd  _install-deb.qmd  adding-clients.qmd  (+4 more)
ios/: README.md
macos/: README.md
python-client/: config.py  openme.py  tests.py  validators.py
website/: CNAME  index.html
windows/: README.md  openme.sln
(+149 files in other folders)
